--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
   <script>
     let count =0 
-     var socket = io.connect('https://dark-calf-garment.cyclic.app:443/', {secure: false, port: '443'});//io({transports: ['websocket']});
+    //io.connect('https://dark-calf-garment.cyclic.app:443/', {secure: false, port: '443'});//
+     var socket = io({transports: ['websocket']});
 
       let el;
       let le;
