--- a/websocket-client.html
+++ b/websocket-client.html
@@ -9,7 +9,7 @@
   </form>
   <div id="messages"></div>
   <script>
-    const webSocket = new WebSocket('wss://dark-calf-garment.cyclic.app');
+    const webSocket = new WebSocket('wss://slmmws.onrender.com');
     webSocket.onmessage = (event) => {
       console.log(event)
       document.getElementById('messages').innerHTML += 
